--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,7 @@
 name: Hola Actions 
 on: 
   push: 
-    branches: [ "master" ] 
+    branches: [ "main" ] 
 jobs: 
   saludo: 
     runs-on: ubuntu-latest 
